# book

./: .gitignore  README.md  go.mod  main.go
agent/: agent.go
agent/helper/: helper.go
cli/: README.md  main.go
cli/utils/env/: env.go
cli/utils/flag/: flag.go
cli/utils/input/: input.go
migrations/: 20240415111840_create_user_table.sql
pkg/agent/: agent.go  models.go
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/app/: db.rs  middleware.rs  mod.rs  routes.rs
server/src/handlers/: user.rs
server/src/models/: user.rs
server/src/utils/: env.rs  logger.rs
utils/env/: env.go
utils/flag/: flag.go
web/src/api/: book.ts  chapter.ts  context.ts  message.ts  sample.ts  source.ts
web/src/api/mockDB/: books.ts  chapters.ts  contexts.ts  messages.ts  sources.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/book/[slug]/: page.tsx
web/src/components/: Header.tsx
web/src/components/book/: Main.tsx  Sidebar.tsx
web/src/components/chapter/: ChapterView.tsx  EditorView.tsx  SourcesView.tsx
web/src/components/home/: Book.tsx
web/src/components/source/: ChatView.tsx  ContextsView.tsx
web/src/models/: book.ts  chapter.ts  source.ts
