[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }